<resources>
    <string name="app_name">ShoppingListX</string>
    <string name="add_an_item">Add an item</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="delete">Delete</string>
    <string name="groceries">Groceries</string>
    <string name="grocery_list">Grocery List</string>
    <string name="home_improvement">Home Improvement</string>
    <string name="home_improvement_list">Home Improvement List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="enter_item_cost">Enter item cost</string>
    <string name="enter_item_quantity">Enter item quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_an_item_to_list">Add an item to list</string>
    <string name="list">list</string>
    <string name="cost">$</string>
</resources>